<resources>
    <string name="app_name">gastos de viagem</string>
    <string name="distancia">Distância</string>
    <string name="total_quilometros">Total de quilômetros</string>
    <string name="preco">Preço</string>
    <string name="preco_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="km_litro">kms por litro</string>
    <string name="gasto_total">Seu gasto total será de:</string>
    <string name="calcular">Calcular</string>
    <string name="rs">R$ 0</string>
    <string name="informe_valores_validos">informe valores válidos</string>
    <string name="preencha_todos_campos">preencha todos os campos</string>
</resources>