<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"

    tools:context=".MainActivity">

    <EditText
        android:id="@+id/distancia"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/distancia"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_quilometros"
        android:layout_gravity="center"/>


    <EditText
        android:id="@+id/preco"
        android:layout_width="match_parent"
        android:layout_marginTop="32dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/preco"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preco_litro"
        android:layout_gravity="center"/>


    <EditText
        android:id="@+id/autonomia"
        android:layout_width="match_parent"
        android:layout_marginTop="32dp"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"
        android:hint="@string/autonomia"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/km_litro"
        android:layout_gravity="center"/>


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:text="@string/gasto_total"
        android:textAllCaps="true"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_marginTop="16dp"
        android:text="@string/rs"
        android:textColor="@color/darkBlue"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:textSize="20sp"
        android:text="@string/calcular"
        android:textColor="@color/white"
        android:backgroundTint="@color/lightGreen"/>


</LinearLayout>